--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!--IE / Edge 自动给数字加下划线的问题-->
     <meta name="format-detection" content="telephone=no,email=no,address=no">
-    <!-- 加图标 -->
-    <!-- <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon"> -->
-    <title>数据平台</title>
-    <!-- <link rel="stylesheet" href="http://39.105.52.139:8080/frontStatic/element-ui/lib/theme-chalk/index.css"> -->
-    <!-- 引入样式 -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vxe-table/lib/index.css"> -->
+    <title>Sophia云服务平台</title>
     <script>
         document.write('<script src="./static/config/config.js?v=' + new Date().getTime() + '"><\/script>');
     </script>
